# ChangeLog for dev-lang/mosml
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mosml/ChangeLog,v 1.4 2004/06/24 22:52:15 agriffis Exp $

  22 Jun 2004; David Holm <dholm@gentoo.org> mosml-2.01.ebuild:
  Added to ~ppc.

*mosml-2.01 (18 Feb 2004)

  18 Feb 2004; <plasmaroo@gentoo.org> mosml-2.01.ebuild:
  Version bump; closes bug #41560.

*mosml-2.00 (13 Nov 2003)

  13 Nov 2003; <plasmaroo@gentoo.org> mosml-2.00.ebuild:
  Initial import, thanks to Malcolm Scott <m@lcolm.org.uk> for providing 
  the ebuild and filing the bug. Bug #33153 closed.