@@ -1,4 +1,4 @@
-MD5 ce89bfbd009b26fd80fb496f4044f61e mosml-2.01.ebuild 1085
-MD5 00ae2787d75b598c4d30fae2c1beb0a4 ChangeLog 615
+MD5 91f90057782eb9753901f75d2000d669 mosml-2.01.ebuild 1093
+MD5 4a9f1cfee23c4bfc41bb56e8a3c27775 ChangeLog 733
 MD5 a5c50833bcc05f696a75e5dc8bb9eb4d metadata.xml 225
 MD5 2064226e85924cc665211f79661a204e files/digest-mosml-2.01 62
